[project]
name = "code-review-agent"
version = "0.1.0"
description = "A code review agent that reviews git diffs and provides feedback on the changes to the codebase. The agent will use the Anthropic API to review the changes and provide feedback on the changes to the codebase."
authors = [{"name" = "Keenan Keeling", "email" = "kkeeling@automatastudios.com"}]
dependencies = [
    "colorama",
    "halo",
    "anthropic",
]

[project.scripts]
code-review-agent = "code_review_agent:cli"
