[project]
name = "code-review-agent"
version = "0.1.0"
description = "A sophisticated code review agent that analyzes git diffs and generates comprehensive feedback on codebase changes. This tool leverages the Anthropic API to perform intelligent code analysis, offering insights on code quality, potential issues, and suggested improvements. It streamlines the code review process by automatically generating pull request descriptions based on the changes in a specified git branch, enhancing collaboration and code quality in software development workflows."
authors = [{"name" = "Keenan Keeling", "email" = "kkeeling@automatastudios.com"}]
dependencies = [
    "colorama",
    "halo",
    "anthropic",
]

[project.scripts]
code-review-agent = "code_review_agent:cli"
